syntax = "proto3";
package approval.v1;
import "session.proto";
import "approval_request.proto";

service ApprovalService {
  rpc CreateSession (CreateSessionRequest) returns (Session);
  rpc GetSession (GetSessionRequest) returns (Session);
  rpc Subscribe (SubscribeRequest) returns (stream SessionEvent);
  rpc SubmitRequest (SubmitRequestPayload) returns (ApprovalRequest);
  rpc SubmitDecision (SubmitDecisionPayload) returns (ApprovalRequest);
}

message CreateSessionRequest {}
message GetSessionRequest { string session_id = 1; }
message SubscribeRequest { string session_id = 1; string client_id = 2; }
message SubmitRequestPayload { string session_id = 1; string text = 2; }
message SubmitDecisionPayload { string session_id = 1; string request_id = 2; bool approved = 3; }
